Refresh of UI/UX
This update adds feedback in the form of font color of the cadence
data. Extends the tolerance to +/- 5 steps per minute. Removes the
settings and companion app in favor of on device button presses to
modify the target cadence. Updates the wipe color.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "appType": "app",
     "appDisplayName": "Cadence Coach",
     "iconFile": "resources/icon.png",
-    "wipeColor": "#f44336",
+    "wipeColor": "#03A9F4",
     "requestedPermissions": [
       "access_activity"
     ],
