Porting to Versa
Adds Versa to build targets.
Creates Versa specific index.gui to accommodate different resolution.
Bump version.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "appType": "app",
     "appDisplayName": "Cadence Coach",
     "iconFile": "resources/icon.png",
-    "wipeColor": "#03A9F4",
+    "wipeColor": "#03a9f4",
     "requestedPermissions": [
       "access_activity"
+    ],
+    "buildTargets": [
+      "higgs",
+      "meson"
     ],
     "i18n": {
       "en": {
